--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,12 @@ cmake_minimum_required(VERSION 3.7.1)
 project(FastNoise2 VERSION 0.10.0)
 set(CMAKE_CXX_STANDARD 17)
 
+set(CMAKE_SYSTEM_NAME Linux)
+set(CMAKE_SYSTEM_PROCESSOR aarch64)
+
+set(CMAKE_C_COMPILER /usr/bin/aarch64-linux-gnu-gcc-13)
+set(CMAKE_CXX_COMPILER /usr/bin/aarch64-linux-gnu-g++-13)
+
 message("FastNoise2 Arch: ${CMAKE_SYSTEM_PROCESSOR}") 
 
 if(CMAKE_SYSTEM_PROCESSOR MATCHES armv7)
@@ -40,7 +46,7 @@ if (NOT DEFINED FASTNOISE2_STANDALONE_PROJECT)
 endif()
 
 # Build DLL
-#set(BUILD_SHARED_LIBS ON) 
+set(BUILD_SHARED_LIBS ON) 
 
 option(FASTNOISE2_NOISETOOL "Build NoiseTool application" ${FASTNOISE2_STANDALONE_PROJECT})
 option(FASTNOISE2_TESTS "Build tests" OFF)
@@ -63,16 +69,6 @@ include(GNUInstallDirs)
 set(install_targets "")
 
 add_subdirectory(src)
-
-if(FASTNOISE2_NOISETOOL)
-    include(cmake/CPM.cmake)
-    add_subdirectory(NoiseTool)
-endif()
-
-if(FASTNOISE2_TESTS)
-    include(cmake/CPM.cmake)  
-    add_subdirectory(tests)
-endif()
 
 
 #Install -----------------------------------------------------------
